--- a/templates/login.html
+++ b/templates/login.html
@@ -10,18 +10,30 @@
         <div class="panel-body">
           <form action="{{url_for('login')}}" method="POST">
             {{form.csrf_token}}
-            <p>
-              {{form.netid.label}}: {{form.netid}}
-              {% if form.netid.errors %}
-              <ul>{% for error in form.netid.errors %}<li>{{error}}</li>{% endfor %}</ul>
-              {% endif %}
-            </p>
-            <p>
-              {{form.password.label}}: {{form.password}}
-              {% if form.password.errors %}
-              <ul>{% for error in form.password.errors %}<li>{{error}}</li>{% endfor %}</ul>
-              {% endif %}
-            </p>
+            <table>
+              <tr>
+                <td>
+                  {{form.netid.label}}:
+                </td>
+                <td>
+                  {{form.netid}}
+                  {% if form.netid.errors %}
+                  <ul>{% for error in form.netid.errors %}<li>{{error}}</li>{% endfor %}</ul>
+                  {% endif %}
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  {{form.password.label}}:
+                </td>
+                <td>
+                  {{form.password}}
+                  {% if form.password.errors %}
+                  <ul>{% for error in form.password.errors %}<li>{{error}}</li>{% endfor %}</ul>
+                  {% endif %}
+                </td>
+              </tr>
+            </table>
             <hr/>
             <input type="submit" value="Submit"/>
             {% if 'database' in form.errors %}<p>{{form.errors['database']}}</p>{% endif %}
